fixed alignment for tile, updated wording and styling, firestore data added

--- a/src/App.css
+++ b/src/App.css
@@ -780,6 +780,10 @@ a.active > div{
   margin: auto;
 }
 
+.m-3{
+  margin: 0.75rem;
+}
+
 .mx-2{
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -833,6 +837,16 @@ a.active > div{
 .my-auto{
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .mb-0\.5{
@@ -997,6 +1011,10 @@ a.active > div{
   height: 4rem;
 }
 
+.h-2{
+  height: 0.5rem;
+}
+
 .h-2\.5{
   height: 0.625rem;
 }
@@ -1027,6 +1045,10 @@ a.active > div{
 
 .h-\[100px\]{
   height: 100px;
+}
+
+.h-\[1rem\]{
+  height: 1rem;
 }
 
 .h-\[480px\]{
@@ -1066,14 +1088,6 @@ a.active > div{
   height: 100vh;
 }
 
-.h-2{
-  height: 0.5rem;
-}
-
-.h-\[1rem\]{
-  height: 1rem;
-}
-
 .max-h-\[90vh\]{
   max-height: 90vh;
 }
@@ -1103,6 +1117,14 @@ a.active > div{
   width: 2.5rem;
 }
 
+.w-12{
+  width: 3rem;
+}
+
+.w-14{
+  width: 3.5rem;
+}
+
 .w-16{
   width: 4rem;
 }
@@ -1127,12 +1149,20 @@ a.active > div{
   width: 9rem;
 }
 
+.w-4{
+  width: 1rem;
+}
+
 .w-40{
   width: 10rem;
 }
 
 .w-5{
   width: 1.25rem;
+}
+
+.w-5\/6{
+  width: 83.333333%;
 }
 
 .w-6{
@@ -1194,22 +1224,6 @@ a.active > div{
 
 .w-full{
   width: 100%;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-14{
-  width: 3.5rem;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-5\/6{
-  width: 83.333333%;
 }
 
 .min-w-0{
@@ -1295,8 +1309,16 @@ a.active > div{
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
 .grid-rows-5{
   grid-template-rows: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1391,6 +1413,14 @@ a.active > div{
   gap: 2rem;
 }
 
+.gap-80{
+  gap: 20rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
 .gap-x-4{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -1398,6 +1428,10 @@ a.active > div{
 
 .gap-y-5{
   row-gap: 1.25rem;
+}
+
+.gap-y-10{
+  row-gap: 2.5rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
